# plone-classicui-pdm-installer

./: .gitignore  README.md  REAME.md  pyproject.toml
resources/: README.md
skel/: zope.conf.in
skel/etc/: site.zcml.in  zope.conf.in
skelrs/etc/: zope.conf.in
