[tool.pdm]
[tool.pdm.dev-dependencies]
deploy = [
    "cookiecutter>=2.1.1",
]

[tool.pdm.scripts]
create_instance = "pdm run mkwsgiinstance -s skel -d instance1"
create_relstorage_instance = "pdm run mkwsgiinstance -s skelrs -d instance1"
start_instance = "runwsgi instance1/etc/zope.ini"


[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MrTango", email = "md@derico.de"},
]
dependencies = [
    "Products.CMFPlone>=6.0.4",
    "plone.app.caching",
    "plone.app.iterate",
    "plone.app.upgrade",
    "Products.CMFPlacefulWorkflow",
    ### only needed when using relstorage
    "pyruvate>=1.2.1",
    "relstorage",
    "psycopg2",
    ###
    "collective.easyform",
    "plone.gallery",
    "collective.collectionfilter",
]
requires-python = ">=3.8,<3.12"
license = {text = "GPL"}
